# rinha-2026

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.lb  README.md  docker-compose.yml  haproxy.cfg  info.json  rust-toolchain.toml
.github/workflows/: ci.yml  publish-image.yml
builder/: Cargo.toml
builder/src/: blob.rs  hnsw.rs  kmeans.rs  lib.rs  main.rs  quantize.rs
builder/tests/: quantize.rs  sources.rs
lb/: Cargo.toml
lb/src/: main.rs
scripts/: bench.sh
server/: Cargo.toml
server/src/: blob.rs  distance.rs  fd_listen.rs  feature.rs  hnsw.rs  index.rs  ivf.rs  knn.rs  lib.rs  main.rs  payload.rs  response.rs  wire.rs
server/tests/: blob.rs  recall.rs
shared/: Cargo.toml
shared/src/: lib.rs
