[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
shared.workspace = true
monoio = { version = "0.2", features = ["iouring", "macros"] }
memmap2 = "0.9"
anyhow = "1"

[dev-dependencies]
proptest = { version = "=1.3.1", default-features = false, features = ["std", "bit-set", "lazy_static"] }
